# cs229

./: .gitignore  05_upsampling.py  README.md  main.py  pyproject.toml
src/: 01_download_raw_data.py  02_xpt_to_pandas.py  03_analysis.py  04_train_test_split.py  04_train_test_split_impute.py  05_preprocess_before_test.py  05_transform_and_cv.py  cv_decisiontree.py  cv_logreg.py  cv_neuralnet.py  gmm.py  kprototypes.py  label_creation.py  logreg.py  neuralnetwork.py  nhanes_io.py  upsample.py  util.py
src/DecisionTree/: tree_baseline.py  tree_cluster.py  tree_cost_sensitive.py  tree_gmm.py  tree_src.py  tree_upsample.py  util.py
src/LogReg/: baseline.py  cost_sensitive.py  util.py
src/experiments/: upsample.py
src/logreg/: logreg_baseline.py  logreg_cluster.py  logreg_cost_sensitive.py  logreg_gmm.py  logreg_src.py  logreg_upsample.py
src/metrics/: baseline_dt_parameters.json  baseline_log_reg_parameters.json  baseline_nn_parameters.json  cluster_dt_parameters.json  cluster_log_reg_parameters.json  cluster_nn_parameters.json  cost_dt_parameters.json  cost_log_reg_parameters.json  cost_nn_parameters.json  gmm_dt_parameters.json  gmm_log_reg_parameters.json  gmm_nn_parameters.json  upsample_dt_parameters.json  upsample_log_reg_parameters.json  upsample_nn_parameters.json
src/nn/: neuralnetwork.py  nn_baseline.py  nn_cluster.py  nn_cost_sensitive.py  nn_gmm.py  nn_upsample.py  util.py
src/results/DecisionTree/: baseline_w_reg_1.0_metrics.json  baseline_w_reg_3.0_metrics.json  baseline_w_reg_4.0_metrics.json  baseline_w_reg_6.0_metrics.json  cluster_metrics.json  (+24 more)
(+55 files in other folders)
