[project]
name = "cs229"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcloud>=0.18.3",
    "matplotlib>=3.10.8",
    "numpy>=1.24.4",
    "pandas>=2.2.0",
    "pyreadstat>=1.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
